# axon-synthesis

./: .auto-changelog  .codespellrc  .copier-answers.yml  .copyright.tmpl  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .gitreview  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  build_dependency_graph.py  commitlint.config.js  package.json  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  how_to_use.yaml
.github/workflows/: run-tox.yml
axon_synthesis/: __init__.py  add_tufts.py  atlas.py  base_path_builder.py  cli.py  config.py  constants.py  create_dataset.py  create_tuft_props.py  geometry.py  inputs.py  pop_neuron_numbers.py  prepare_atlas.py  smoothing.py  source_points.py  statistics.py  target_points.py  trunk_properties.py  typing.py  utils.py  version.py  white_matter_recipe.py  workflows.py
axon_synthesis/PCSF/: create_graph.py  extract_terminals.py  plot_steiner.py  post_process.py  steiner_morphologies.py
axon_synthesis/PCSF/clustering/: __init__.py  from_barcodes.py  from_brain_regions.py  from_sphere_parents.py  from_spheres.py  plot.py  utils.py
axon_synthesis/PCSF/create_graph/: __init__.py  plot.py  utils.py
axon_synthesis/cli/: __init__.py  common.py  input_creation.py  scripts.py  synthesis.py  utils.py  validation.py
axon_synthesis/data/: tuft_parameters.json
axon_synthesis/input_creation/: __init__.py  inputs.py  pop_neuron_numbers.py  trunk_properties.py
axon_synthesis/input_creation/clustering/: __init__.py  extract_terminals.py  from_barcodes.py  from_brain_regions.py  from_sphere_parents.py  from_spheres.py  plot.py  utils.py
axon_synthesis/inputs/: __init__.py  create.py  pop_neuron_numbers.py  trunk_properties.py
axon_synthesis/inputs/clustering/: __init__.py  extract_terminals.py  from_barcodes.py  from_brain_regions.py  from_sphere_parents.py  from_spheres.py  plot.py  utils.py
axon_synthesis/synthesis/: __init__.py  add_tufts.py  create_tuft_props.py  outputs.py  plot.py  source_points.py  target_points.py  tuft_properties.py
axon_synthesis/synthesis/PCSF/: plot_steiner.py  steiner_morphologies.py  steiner_tree.py
axon_synthesis/synthesis/PCSF/create_graph/: __init__.py  plot.py
axon_synthesis/synthesis/main_trunk/: __init__.py  plot_steiner.py  post_process.py  steiner_morphologies.py  steiner_morphology.py  steiner_tree.py
axon_synthesis/synthesis/main_trunk/create_graph/: __init__.py  plot.py  utils.py
axon_synthesis/validation/: __init__.py  atlas_utils.py  mimic.py  projection_intensity.py  statistics.py  utils.py
doc/source/: api_ref.rst  conf.py
docs/source/: api_ref.rst  changelog.rst  cli.rst  conf.py  config_file.rst  configfile.rst  contributing.rst  general_principles.rst  index.rst  input_files.rst
docs/source/scripts/: create_graph_figure.py
examples/: axon_grafting_points.h5  config.cfg  input_cells.mvd3  run.sh
examples/inputs/: tuft_distributions.json  tuft_parameters.json
examples/morphologies/: luigi.cfg
examples/morphologies/raw_morphologies/: 165421.swc  172992.swc  172993.swc  172994.swc  172995.swc  172996.swc  172997.swc  172998.swc  172999.swc  173000.swc
examples/morphologies/repair_release/asc/: 172992.asc  172993.asc  172994.asc  172995.asc  172996.asc  172997.asc  172998.asc  172999.asc  neurondb.xml
research/: .gitignore  add_tufts.py  atlas.py  config.py  create_dataset.py  create_tuft_props.py  geometry.py  luigi.cfg  luigi_1vor-cl_dist_0-cl_num_1.cfg  luigi_1vor-cl_dist_200-cl_num_20.cfg  luigi_2vor-cl_dist_0-cl_num_1.cfg  luigi_2vor-cl_dist_500-cl_num_20-sphere_parents.cfg  luigi_3vor-cl_dist_0-cl_num_1-sphere_parents.cfg  luigi_mimic.cfg  luigi_out_1vor-cl_dist_300-max_dist_1000-cl_num_20_sphere-parents_lite.cfg  luigi_out_from_atlas.cfg  luigi_out_from_atlas_cluster_by_region.cfg  plot_raw_morphologies.py  pop_neuron_numbers.py  requirements.txt  smoothing.py  source_points.py  statistics.py  target_points.py  tuft_distributions.json  tuft_parameters.json  utils.py  white_matter_recipe.py  workflows.py
research/PCSF/: clustering.py  create_graph.py  extract_terminals.py  plot_steiner.py  steiner_morphologies.py  steiner_tree.py
tests/: __init__.py  conftest.py  data_factories.py  test_atlas.py  test_cli.py  test_clustering.py  test_examples.py  test_geometry.py  test_statistics.py  test_trunk_post_process.py  test_workflows.py
tests/data/: luigi.cfg  luigi_mimic.cfg  tuft_distributions.json  tuft_parameters.json
tests/data/mimic_example/inputs/: circuit.h5  metadata.json  population_probabilities.csv  projection_probabilities.csv
tests/data/mimic_example/inputs/Clustering/: clustered_morphologies_paths.csv  clustered_terminals.csv  trunk_properties.json  tuft_properties.json
tests/data/mimic_example/inputs/converted_morphologies/: 172992.h5  172993.h5
tests/data/mimic_example/synthesis/: target_points.h5
tests/data/mimic_example/synthesis/GraphCreationData/: 172992_0.h5  172993_0.h5
tests/data/mimic_example/synthesis/MainTrunkMorphologies/: 172992_0.h5  172993_0.h5
tests/data/mimic_example/synthesis/Morphologies/: 172992.h5  172993.h5
tests/data/mimic_example/synthesis/PostProcessTrunkMorphologies/: 172992_0.h5  172993_0.h5
tests/data/mimic_example/synthesis/SteinerTreeSolutions/: 172992_0.h5  172993_0.h5  172993_0_nodes.feather
tests/data/mimic_example/synthesis/TuftMorphologies/: 172992_0_1.h5  172993_0_1.h5  172993_0_2.h5  172993_0_3.h5
tests/data/mimic_example/synthesis_basic_172992/: target_points.h5
tests/data/mimic_example/synthesis_basic_172992/GraphCreationData/: 172992_0.h5
tests/data/mimic_example/synthesis_basic_172992/MainTrunkMorphologies/: 172992_0.h5
tests/data/mimic_example/synthesis_basic_172992/Morphologies/: 172992.h5
tests/data/mimic_example/synthesis_basic_172992/PostProcessTrunkMorphologies/: 172992_0.h5
tests/data/mimic_example/synthesis_basic_172992/SteinerTreeSolutions/: 172992_0_edges.feather  (+1 more)
tests/data/mimic_example/synthesis_basic_172993/: target_points.h5
(+22 files in other folders)
