# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.black]
line-length = 100
target-version = [
    'py37',
    'py38',
    'py39',
]

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:ipyparallel",
    "ignore::DeprecationWarning:luigi",
    "ignore::DeprecationWarning:neurom.morphmath",
    "ignore::DeprecationWarning:neuror.unravel",
    "ignore::DeprecationWarning:sphinx.util.docutil",
    "ignore:Config file does not exist. luigi\\.cfg:UserWarning:luigi",
    "ignore:Please use `cKDTree` from the `scipy.spatial` namespace, the `scipy.spatial.ckdtree` namespace is deprecated.:DeprecationWarning:morphology_workflows.repair",
]
