[project]
name = "axon-synthesis"
authors = [
    { name="bbp-ou-cells", email="bbp-ou-cells@groupes.epfl.ch" }
]
description = "A package to synthesize artificial axons"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BBP-internal-confidential" }
classifiers = [
    # TODO: Update to relevant classifiers
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
docs = [
    "m2r2",
    "sphinx<6",
    "sphinx-bluebrain-theme",
    "sphinx-click",
]
test = [
    "mock>=3",
    "pytest>=6",
    "pytest-click>=1",
    "pytest-console-scripts>=1.3",
    "pytest-cov>=3",
    "pytest-html>=2",
]

[project.urls]
Homepage = "https://bbpteam.epfl.ch/documentation/projects/axon-synthesis"
Repository = "https://bbpgitlab.epfl.ch/neuromath/axon-synthesis"
Tracker = "https://bbpteam.epfl.ch/project/issues/projects/CELLS/issues"

[project.scripts]
axon-synthesis = "axon_synthesis.cli:main"

[build-system]
requires = [
    "setuptools>=45",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axon_synthesis*"]

[tool.black]
line-length = 100
target-version = [
    "py310",
    "py311",
    "py312",
]

[tool.pydocstyle]
# ignore the following:
#   - D107: Missing docstring in __init__
add-ignore = [
    "D107",
]
convention = "google"

[tool.isort]
profile = "black"
line_length = 100
force_single_line = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
]

[tool.ruff]
line-length = 100  # Same as Black.
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# select = ["E4", "E7", "E9", "F"]
select = ["ALL"]
ignore = [
    "ANN001",  # TODO: Fix and remove this one
    "ANN201",  # TODO: Fix and remove this one
    "ANN204",  # TODO: Fix and remove this one
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "B905",
    "COM812",
    "ERA001",
    "EXE002",
    "FIX002",
    "ISC001",
    "PD002",
    "PD013",
    "PD015",
    "TD002",
    "TD003",
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

# [tool.ruff.lint.pylint]
# max-args=12
# max-branches = 12
# max-statements=50

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
force-single-line = true
